@@ -35,6 +35,9 @@ import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -62,7 +65,7 @@ public class NicoAudioTrack extends DelegatedAudioTrack {
 
     @Override
     public void process(LocalAudioTrackExecutor localExecutor) throws Exception {
-        File playbackUrl = downloadAudio();
+        File playbackUrl = downloadAudio(NicoAudioSourceManager.ytDlpPath);
 
         log.debug("Starting NicoNico track from URL: {}", playbackUrl);
         try (LocalSeekableInputStream inputStream = new LocalSeekableInputStream(playbackUrl)) {
@@ -71,80 +74,133 @@ public class NicoAudioTrack extends DelegatedAudioTrack {
     }
 
     //
-    private @NotNull File downloadAudio() {
-        String path = new File(".").getAbsoluteFile().getParent();
-        Path file = Path.of(path, "cache" + File.separator + getIdentifier() + ".wav");
+    private @NotNull File downloadAudio(@NotNull Path ytDlpPath) {
+        try {
+            // Route and cache destination
+            Path botRoot = Paths.get("").toAbsolutePath().normalize();
+            Path cacheDir = botRoot.resolve("cache");
+            Files.createDirectories(cacheDir);
 
-        if (Files.notExists(file)) {
-            try {
-                log.info("Downloading NicoNico track from: {}", getIdentifier());
-                List<String> command = new java.util.ArrayList<>();
-                command.add("yt-dlp");
+            // Output file (absolute path)
+            String id = getIdentifier(); // Existing Method Assumption
+            Path outFile = cacheDir.resolve(id + ".wav");
 
-                if (NicoAudioSourceManager.userName != null && NicoAudioSourceManager.password != null) {
-                    command.add("--username");
-                    command.add(NicoAudioSourceManager.userName);
-                    command.add("--password");
-                    command.add(NicoAudioSourceManager.password);
-                    log.info("Used Niconico login information.");
-                    if (NicoAudioSourceManager.twofactor != null) {
-                        // Two-factor authentication code format check (optional: 6-digit number, etc.)
-                        String code = TOTPGenerator.getCode(NicoAudioSourceManager.twofactor);
-                        if (code != null && code.matches("\\d{6}")) {
-                            command.add("--twofactor");
-                            command.add(code);
-                            log.info("Performed two-factor authentication::{}", code);
-                        } else {
-                            log.warn("Invalid two-factor authentication code:{}", code);
-                        }
-                    }
-                }
-
-                command.add("--extract-audio");
-                command.add("--audio-format");
-                command.add("wav");
-                command.add("https://www.nicovideo.jp/watch/" + getIdentifier());
-                command.add("--output");
-                command.add("cache/" + getIdentifier() + ".wav");
-
-                ProcessBuilder processBuilder = new ProcessBuilder(command);
-                processBuilder.directory(new File(path)); // Set current directory (as needed)
-                Process process = processBuilder.start();
-
-                // Create a thread to read the error stream
-                new Thread(() -> {
-                    try (BufferedReader errorReader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
-                        String line;
-                        while ((line = errorReader.readLine()) != null) {
-                            log.error(line);
-                        }
-                    } catch (IOException e) {
-                        log.error("Error reading process error stream", e);
-                    }
-                }).start();
-
-                // Create a thread to read the standard output stream
-                new Thread(() -> {
-                    try (BufferedReader inputReader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-                        String line;
-                        while ((line = inputReader.readLine()) != null) {
-                            log.debug(line);
-                        }
-                    } catch (IOException e) {
-                        log.error("Error reading process input stream", e);
-                    }
-                }).start();
-
-                int exitCode = process.waitFor();
-                if (exitCode != 0) {
-                    throw new RuntimeException("yt-dlp command failed with exit code " + exitCode);
-                }
-                process.destroy();
-            } catch (Exception e) {
-                throw new RuntimeException(e);
+            // If it already exists and is non-zero, return it as is.
+            if (Files.isRegularFile(outFile) && Files.size(outFile) > 0) {
+                return outFile.toFile();
             }
+
+            log.info("Downloading NicoNico track via yt-dlp: id={} -> {}", id, outFile);
+
+            // Command construction (yt-dlp uses the absolute path of the self-installed binary)
+            List<String> cmd = new ArrayList<>();
+            cmd.add(ytDlpPath.toString());
+
+            // Stabilization Options for Execution
+            Collections.addAll(cmd,
+                    "--no-progress",
+                    "--no-playlist",
+                    "--ignore-config",
+                    "--newline",
+                    "--restrict-filenames",
+                    "--no-overwrites" // Existing File Protection (Skip if already exists)
+            );
+
+            // Login (optional)
+            if (NicoAudioSourceManager.userName != null && NicoAudioSourceManager.password != null) {
+                cmd.add("--username");
+                cmd.add(NicoAudioSourceManager.userName);
+                cmd.add("--password");
+                cmd.add(NicoAudioSourceManager.password);
+                log.info("Niconico login information was used.");
+
+                // TOTP (Two-Factor Authentication)
+                if (NicoAudioSourceManager.twofactor != null) {
+                    String code = TOTPGenerator.getCode(NicoAudioSourceManager.twofactor);
+                    if (code != null && code.matches("\\d{6}")) {
+                        cmd.add("--twofactor");
+                        cmd.add(code);
+                        log.info("Two-factor authentication has been completed: {}", code);
+                    } else {
+                        log.warn("Invalid two-step verification code: {}", code);
+                    }
+                }
+            }
+
+            // Audio Extraction (WAV/Highest Quality)
+            Collections.addAll(cmd,
+                    "--extract-audio",
+                    "--audio-format", "wav",
+                    "--audio-quality", "0"
+            );
+
+            // Specify the output destination using an absolute path
+            // (as relative paths may shift depending on the operating environment).
+            cmd.add("--output");
+            cmd.add(outFile.toString());
+
+            // Target URL
+            cmd.add("https://www.nicovideo.jp/watch/" + id);
+
+            // Process execution: Consolidate error and standard output for easier reading
+            ProcessBuilder pb = new ProcessBuilder(cmd);
+            pb.directory(botRoot.toFile());
+            pb.redirectErrorStream(true);
+            Process proc = pb.start();
+
+            StringBuilder logBuf = new StringBuilder(4096);
+            try (BufferedReader r = new BufferedReader(new InputStreamReader(proc.getInputStream()))) {
+                String line;
+                while ((line = r.readLine()) != null) {
+                    logBuf.append(line).append('\n');
+                    // yt-dlp takes a long time to complete, so run it in DEBUG mode.
+                    log.debug(line);
+                }
+            }
+
+            // Timeout (adjust as needed)
+            boolean finished = proc.waitFor(300, java.util.concurrent.TimeUnit.SECONDS);
+            if (!finished) {
+                proc.destroyForcibly();
+                throw new RuntimeException("yt-dlp timed out (300s).");
+            }
+
+            int code = proc.exitValue();
+            if (code != 0) {
+                // When failure occurs: Partial file cleanup
+                safeDeleteIfEmpty(outFile);
+                String tail = tailOf(logBuf, 2000);
+                throw new RuntimeException("yt-dlp failed with exit code " + code + "\n--- output ---\n" + tail);
+            }
+
+            // Even if the process terminates normally, 0 bytes or similar values are treated as an error.
+            if (!Files.isRegularFile(outFile) || Files.size(outFile) == 0) {
+                safeDeleteIfEmpty(outFile);
+                String tail = tailOf(logBuf, 2000);
+                throw new RuntimeException("yt-dlp finished but output not found or empty.\n--- output ---\n" + tail);
+            }
+
+            return outFile.toFile();
+
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to download audio via yt-dlp", e);
         }
-        return file.toFile();
+    }
+
+// --- helpers ---
+
+    private static void safeDeleteIfEmpty(Path p) {
+        try {
+            if (Files.isRegularFile(p) && Files.size(p) == 0) {
+                Files.deleteIfExists(p);
+            }
+        } catch (IOException ignored) {}
+    }
+
+    private static String tailOf(CharSequence sb, int max) {
+        int len = sb.length();
+        if (len <= max) return sb.toString();
+        return sb.subSequence(len - max, len).toString();
     }
 
     @Override
